tests/fixtures/negative/potential-bugs/MissingPackageDeclaration.kt
package com.example

class WithPackage {
    fun doSomething() {
        println("hello")
    }
}
